k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
spec:
  selector:
    matchLabels:
      app: go-gke
  template:
    metadata:
      labels:
        app: go-gke
    spec:
      containers:
      - name: go-gke
        #image: mertcakmak2/go-k8s
        image: mertcakmak2/go-gke
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: go-service
spec:
  type: ClusterIP
  selector:
    app: go-gke
  ports:
  - port: 8000
    targetPort: 8080
