k8s/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-gke-ingress
spec:
  #defaultBackend:
    #service:
      #name: go-service
      #port:
        #number: 8000
  rules:
  - http:
      paths:
      - path: /api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: go-service
            port:
              number: 8000
